# photo-normalizer

./: .gitignore  CLAUDE.md  README.md  config.yaml  mkdocs.yml  normalize.py  pyproject.toml
.superpowers/brainstorm/37541-1776170428/content/: app-platform.html  approaches.html
.superpowers/brainstorm/37541-1776170428/state/: server-info
docs/: cli-reference.md  index.md
normalizer/: color.py  config.py  detect.py  models.py  pipeline.py  preview.py  report.py  transform.py
normalizer/cli/: run_cmd.py  step_cmds.py
templates/: preview.html.j2
tests/: conftest.py  test_cli.py  test_color.py  test_config.py  test_detect.py  test_models.py  test_pipeline.py  test_preview.py  test_report.py  test_step_cmds.py  test_transform.py  test_transform_steps.py
