[project]
name = "photo-normalizer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["normalizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
